--- a/create.html
+++ b/create.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -8,7 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>To-Do API Front-End</title>
+  <title>To-Do API Front-End | Create</title>
 
 
 
@@ -42,27 +43,47 @@
 
 <body>
 
-  <h1>To-Do API Front-End</h1>
+  <h1>To-Do API Front-End | Create</h1>
 
   <ul class="nav">
 
     <li class="nav-item">
 
-      <a class="nav-link active" href="./index.html">Home</a>
+      <a class="nav-link" href="./index.html">Home</a>
 
     </li>
 
     <li class="nav-item">
 
-      <a class="nav-link" href="./create.html">Create</a>
+      <a class="nav-link active" href="./create.html">Create</a>
 
     </li>
 
   </ul>
 
-  <h2>To-Dos</h2>
+  <h2>Create To-Do</h2>
 
-  <ul id="index"></ul>
+  <form id="create">
+
+    <div class="form-group">
+
+      <label for="task">Task</label>
+
+      <input type="text" class="form-control" id="task">
+
+    </div>
+
+    <div class="form-group form-check">
+
+      <input type="checkbox" class="form-check-input" id="completed">
+
+      <label class="form-check-label" for="completed">Completed</label>
+
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+
+  </form>
 
 </body>
 
